--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </main>
 
 <video id="backgroundVideo" autoplay muted loop>
-    <source src="graphics/trd.mov" type="video/mp4">
+    <source src="graphics/trd.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
